tests/functional/lang/eval-fail-filter-2.err.exp
error:
       … while calling the 'filter' builtin
         at /pwd/lang/eval-fail-filter-2.nix:1:1:
            1| builtins.filter 1 [ "foo" ]
             | ^
            2|

       … while evaluating the first argument passed to builtins.filter

       error: expected a function but found an integer: 1
